--- a/app/src/main/res/layout/activity_pets.xml
+++ b/app/src/main/res/layout/activity_pets.xml
@@ -21,5 +21,12 @@
         android:textSize="30sp"
         android:text="Paw Patrol" />
 
+    <TextView
+        android:id="@+id/finderTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Pets That Be Adopted Near "
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true"/>
 
 </RelativeLayout>
