Hard code a string array of pets

--- a/app/src/main/res/layout/activity_pets.xml
+++ b/app/src/main/res/layout/activity_pets.xml
@@ -25,8 +25,7 @@
         android:id="@+id/finderTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Pets That Be Adopted Near "
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true"/>
+        android:layout_centerInParent="true"
+        android:text="Pets That Be Adopted Near " />
 
 </RelativeLayout>
