--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,7 +29,7 @@
         android:layout_above="@+id/seeAllPetsButton"
         android:layout_marginBottom="10dp"
         android:padding="5dp"
-        android:layout_centerHorizontal="true"
+        android:layout_centerHorizontal=""
         android:hint="Enter your location"/>
 
     <Button
