--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,9 +27,9 @@
         android:layout_height="wrap_content"
         android:background="@color/purple_200"
         android:layout_above="@+id/seeAllPetsButton"
-        android:layout_marginBottom="10dp"
+        android:layout_marginBottom="75dp"
         android:padding="5dp"
-        android:layout_centerHorizontal=""
+        android:layout_centerHorizontal="true"
         android:hint="Enter your location"/>
 
     <Button
@@ -38,8 +38,17 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:background="@color/purple_200"
         android:text="See pets you can adopt" />
+
+    <Button
+        android:id="@+id/signUpButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/seeAllPetsButton"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="500dp"
+        android:text="Sign Up Here" />
 
 
 </RelativeLayout>
