--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,35 +22,30 @@
         android:textColor="@color/black"
         android:textSize="60sp" />
 
-    <EditText
-        android:id="@+id/petFinderText"
-        android:layout_width="wrap_content"
+
+    <Button
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/purple_200"
-        android:layout_above="@+id/seeAllPetsButton"
-        android:layout_marginBottom="75dp"
-        android:padding="5dp"
-        android:layout_centerHorizontal="true"
-        android:hint="Enter your location"/>
+        android:text="My Saved Pets"
+        android:id="@+id/savedPetsButton"
+        android:background="@color/teal_700"
+        android:textColor="@color/black"
+        android:visibility="visible"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"/>
 
     <Button
         android:id="@+id/seeAllPetsButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="90dp"
+        android:layout_marginTop="572dp"
+        android:layout_marginEnd="86dp"
         android:text="See pets you can adopt" />
-
-    <Button
-        android:id="@+id/signUpButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/seeAllPetsButton"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="400dp"
-        android:text="Sign Up Here"
-        android:textSize="15sp" />
 
 
 </RelativeLayout>
