--- a/app/src/main/res/drawable/edit_text_bg.xml
+++ b/app/src/main/res/drawable/edit_text_bg.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-
-    <corners android:radius="20dp"/>
+<shape xmlns:android="http://schemas.android.com/apk/res/android">
+    <corners android:radius="20dp" />
     <stroke android:width="2dp"
-        android:color="#B20C0C0D"/>
+        android:color="@color/teal_700"/>
 
-</selector>
+</shape>
