--- a/app/src/main/res/layout/fragment_pet_detail.xml
+++ b/app/src/main/res/layout/fragment_pet_detail.xml
@@ -8,22 +8,22 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:background="@color/white">
+        android:background="@color/white"
+        android:orientation="vertical">
 
         <ImageView
             android:id="@+id/petImageView"
             android:layout_width="match_parent"
             android:layout_height="180dp"
-            android:src="@drawable/cutecat"
-            android:scaleType="centerCrop" />
+            android:scaleType="centerCrop"
+            android:src="@drawable/cutecat" />
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@android:color/white"
-            android:paddingTop="20dp"
             android:paddingLeft="10dp"
+            android:paddingTop="20dp"
             android:paddingRight="10dp"
             android:paddingBottom="20dp">
 
@@ -31,21 +31,21 @@
                 android:id="@+id/petNameTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Pet Name"
-                android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
-                android:textSize="20sp"
+                android:layout_alignParentLeft="true"
+                android:text="Pet Name"
                 android:textColor="@color/black"
+                android:textSize="20sp"
                 android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/contactTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Contact"
                 android:layout_alignTop="@+id/petNameTextView"
-                android:layout_alignParentRight="true"
                 android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:text="Contact"
                 android:textColor="@color/teal_200"
                 android:textStyle="bold" />
 
@@ -53,68 +53,68 @@
                 android:id="@+id/breedTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Breed Type"
                 android:layout_below="@+id/petNameTextView"
-                android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
+                android:layout_alignParentLeft="true"
+                android:text="Breed Type"
                 android:textColor="@color/teal_700"
                 android:textStyle="italic" />
         </RelativeLayout>
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent" >
+            android:layout_height="match_parent">
 
             <LinearLayout
-                android:orientation="vertical"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_alignParentTop="true"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
                 android:layout_above="@+id/savePetButton"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentTop="true"
+                android:orientation="vertical"
                 android:paddingLeft="30dp"
                 android:paddingTop="20dp"
                 android:paddingRight="30dp">
 
-            <TextView
-                android:id="@+id/websiteTextView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="View online"
-                android:drawableLeft="@drawable/ic_home_24dp"
-                android:drawablePadding="4dp"
-                android:textColor="@color/teal_700"
-                android:textSize="15sp"
-                android:textStyle="bold"
-                android:layout_marginBottom="10dp"
-                android:gravity="center" />
+                <TextView
+                    android:id="@+id/websiteTextView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="10dp"
+                    android:drawableLeft="@drawable/ic_home_24dp"
+                    android:drawablePadding="4dp"
+                    android:gravity="center"
+                    android:text="View online"
+                    android:textColor="@color/teal_700"
+                    android:textSize="15sp"
+                    android:textStyle="bold" />
 
-            <TextView
-                android:id="@+id/phoneTextView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="(503) 223-1282"
-                android:drawableLeft="@drawable/ic_call_24dp"
-                android:drawablePadding="4dp"
-                android:textColor="@color/teal_700"
-                android:textSize="15sp"
-                android:textStyle="bold"
-                android:layout_marginBottom="10dp"
-                android:gravity="center"/>
+                <TextView
+                    android:id="@+id/phoneTextView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="10dp"
+                    android:drawableLeft="@drawable/ic_call_24dp"
+                    android:drawablePadding="4dp"
+                    android:gravity="center"
+                    android:text="(503) 223-1282"
+                    android:textColor="@color/teal_700"
+                    android:textSize="15sp"
+                    android:textStyle="bold" />
 
-            <TextView
-                android:id="@+id/addressTextView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Breed"
-                android:drawableLeft="@drawable/ic_place_24dp"
-                android:drawablePadding="4dp"
-                android:textColor="@color/teal_700"
-                android:textSize="15sp"
-                android:textStyle="bold"
-                android:layout_marginBottom="10dp"
-                android:gravity="center_vertical"/>
+                <TextView
+                    android:id="@+id/addressTextView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="10dp"
+                    android:drawableLeft="@drawable/ic_place_24dp"
+                    android:drawablePadding="4dp"
+                    android:gravity="center_vertical"
+                    android:text="Breed"
+                    android:textColor="@color/teal_700"
+                    android:textSize="15sp"
+                    android:textStyle="bold" />
 
             </LinearLayout>
 
@@ -122,9 +122,9 @@
                 android:id="@+id/savePetButton"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Save Pet"
                 android:layout_alignParentBottom="true"
                 android:background="@color/white"
+                android:text="Save Pet"
                 android:textColor="@color/teal_700"
                 android:textSize="15sp" />
 
